feat: add `fontSize` as a parameter

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <canvas id="matrixCanvas1"></canvas>
     <!-- Second Layer -->
     <canvas id="matrixCanvas2"></canvas>
+    <!-- Third Layer -->
+    <canvas id="matrixCanvas3"></canvas>
     <!-- Foreground Canvas -->
     <canvas id="overlayCanvas"></canvas>
     <script src="matrix.js"></script>
