feat: adds blur to `overlayCanvas`

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             opacity: 0.4;
             transition: opacity 0.5s ease-in-out;
         }
+
         .opacity-8 {
             opacity: 0.8;
             transition: opacity 0.5s ease-in-out;
@@ -48,7 +49,7 @@
     <!-- Third Layer -->
     <canvas id="matrixCanvas3" class="blur opacity-4"></canvas>
     <!-- Foreground Canvas -->
-    <canvas id="overlayCanvas" class="opacity-8"></canvas>
+    <canvas id="overlayCanvas" class="blur opacity-8"></canvas>
     <script src="matrix.js"></script>
 </body>
 
