feat: update opacity

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     <!-- First Layer -->
     <canvas id="matrixCanvas1"></canvas>
     <!-- Second Layer -->
-    <canvas id="matrixCanvas2"></canvas>
+    <canvas id="matrixCanvas2" class="opacity-4"></canvas>
     <!-- Third Layer -->
     <canvas id="matrixCanvas3" class="blur opacity-4"></canvas>
     <!-- Foreground Canvas -->
-    <canvas id="overlayCanvas" class="blur opacity-8"></canvas>
+    <canvas id="overlayCanvas" class="blur opacity-4"></canvas>
     <script src="matrix.js"></script>
 </body>
 
