opengraph cards, twitter cards

--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:title" content="Matrix Falling Code with Multi-Layered Canvases" />
+    <meta property="og:description"
+        content="Create a visually stunning Matrix rain animation using HTML5 Canvas, JavaScript, and CSS. Add gradients, unique trails, and interactive effects to bring your code to life!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://matrix.andreszenteno.com" />
+    <meta property="og:image" content="https://zenteno.org/public_assets/matrix-rain-2.png" />
+    <meta property="og:image:alt" content="Screenshot of a Matrix falling code animation with colorful gradients." />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Matrix Rain Animations" />
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="matrix.andreszenteno.com">
+    <meta property="twitter:url" content="https://matrix.andreszenteno.com">
+    <meta name="twitter:title" content="Matrix Falling Code with Multi-Layered Canvases">
+    <meta name="twitter:description" content="Create a visually stunning Matrix rain animation using HTML5 Canvas, JavaScript, and CSS. Add gradients, unique trails, and interactive effects to bring your code to life!">
+    <meta name="twitter:image" content="https://zenteno.org/public_assets/matrix-rain-2.png">
+
     <title>Matrix Falling Code with Multi-Layered Canvases</title>
     <style>
         body,
